fixed vertical alignment

--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ h2{
     border: 1px solid black;
     padding:0 20px;
     height: 35px;
+    line-height: 35px; /* to vertically align text*/
     width: fit-content;
     border-radius: 10px;
     box-shadow: 0 0 3px;
@@ -198,6 +199,7 @@ a:visited{
     padding: 0;
     margin-right:4px;
     font-size: 17px;
+
 }
 .wa-share{
     display: flex;
@@ -208,6 +210,7 @@ a:visited{
     border-radius: 4px;
     background-color: #0b880b;
     height:28px ;
+    line-height: 28px;
     width: 90px;
     font-weight: 900;
     font-size: 15px;
